--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,9 +22,9 @@
           <span class="point"> · </span>
           <span>{{ site.description }}</span>
           <span class="point"> · </span>
-          <span>&copy; 2015 Gaohaoyang</span>
+          <span>&copy; 2015 zinbers</span>
           <span class="point"> · </span>
-          <span>Designed by <a href="https://github.com/Gaohaoyang">HyG</a></span>
+          <span>Designed by <a href="https://github.com/zinbers">zinbers</a></span>
 
       </div>
     </div>
