--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,8 @@
           
           {% endif %}
 
+          <span class="point"> · </span>
+          
           {% if site.twitter_username %}
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="icon  icon--twitter">
