--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,13 @@
           <span>&copy; 2016 zinbers</span>
           <span class="point"> · </span>
           <span>Designed by <a href="https://github.com/zinbers">zinbers</a></span>
+          <!-- Styled -->
+          <div class="realtimeuserscounter realtimeuserscounter--styled"></div>
+          <script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script>
 
+          <!-- Plain -->
+          <div class="realtimeuserscounter"></div>
+          <script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script>
       </div>
     </div>
   </div>
