--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
         <div class="realtimeuserscounter realtimeuserscounter--styled"></div>
         <script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script>
 
-        <!-- Plain -->
+<!--         <!-- Plain -->
         <div class="realtimeuserscounter"></div>
-        <script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script>
+        <script src="https://realtimeusers.bycontrast.co/realtimeusers.js"></script> -->
       </div>
     </div>
     <div class="row">
