--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,12 @@
       </a>
     </div>
 
+    <div class="comments">
+        {% if page.comments %}
+          {% include comments.ext %}
+        {% endif %}
+    </div>
+
   {% include footer.html %}
 
 <!-- 在新窗口中打开 -->
