--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
       </article>
       <hr>
       <!-- 来必力City版安装代码 -->
-      <div id="lv-container" data-id="city" data-uid="MTAyMC8yODg2Mi81NDMy">
+      <!-- <div id="lv-container" data-id="city" data-uid="MTAyMC8yODg2Mi81NDMy">
         <script type="text/javascript">
          (function(d, s) {
              var j, e = d.getElementsByTagName(s)[0];
@@ -28,7 +28,12 @@ layout: default
              e.parentNode.insertBefore(j, e);
          })(document, 'script');
         </script>
-      <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+      <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript> -->
+      <div class="comments">
+        {% if page.comments %}
+          {% include comments.ext %}
+        {% endif %}
+      </div>
   </div>
   <!-- City版安装代码已完成 -->
     </div>
